--- a/src/Footer.css
+++ b/src/Footer.css
@@ -15,6 +15,7 @@
   font-size: 1rem;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight:600;
+  padding-right: 0.5rem;
 }
 
 .toolbar {
