--- a/src/Footer.css
+++ b/src/Footer.css
@@ -8,6 +8,7 @@
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight:600;
   padding-right: 3rem;
+  padding-left: 0.5rem;
 }
 
 .fine-print {
