--- a/src/ItemCardMedium.css
+++ b/src/ItemCardMedium.css
@@ -1,4 +1,4 @@
-.item-card {
+.item-card-medium {
   /* Add shadows to create the "card" effect */
   text-align: left;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -7,36 +7,36 @@
   transition: 0.3s;
   border-radius: 5px;
   padding: 1rem;
-  width: 10rem;
-  height: 15rem;
+  width: 25rem;
+  height: 20rem;
   position:relative;
 }
 
 /* On mouse-over, add a deeper shadow */
-.item-card:hover {
+.item-card-medium:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.item-name {
+.item-name-medium {
   color:black;
   font-weight: bold;
   padding-top: 0.5rem;
   margin:0;
 }
 
-.item-distance {
+.item-distance-medium {
   padding-top:0.5rem;
   margin:0;
 }
 
-.item-price {
+.item-price-medium {
   position: absolute;
   font-weight: bold;
   left: 1rem;
   bottom: 0;
 }
 
-.item-button {
+.item-button-medium {
   background-color: rgb(193, 215, 158);
   color:white;
   border:none;
@@ -44,10 +44,24 @@
   border-radius: 5px;
   position: absolute;
   right: 1rem;
-  bottom: 0.5rem;
+  top: 0.5rem;
   transition: 0.3s;
 }
 
-.item-button:hover{
+.item-button-medium:hover{
   background-color: rgb(155, 185, 107);
+}
+
+.seller-image-medium {
+  float:left;
+  border-radius: 10rem;
+  width: 2rem;
+  height: 2rem;
+}
+
+.seller-name-medium {
+  float:left;
+  padding-left: 0.5rem;
+  position:relative;
+  bottom: 0.5rem;
 }
