--- a/src/ItemCardMedium.css
+++ b/src/ItemCardMedium.css
@@ -30,10 +30,7 @@
 }
 
 .item-price-medium {
-  position: absolute;
   font-weight: bold;
-  left: 1rem;
-  bottom: 0;
 }
 
 .item-button-medium {
@@ -64,4 +61,33 @@
   padding-left: 0.5rem;
   position:relative;
   bottom: 0.5rem;
+}
+
+.labels-medium {
+  color:black;
+  font-weight: bold;
+  padding-bottom: 0.5rem;
+  margin:0;
+}
+
+.card-body-medium {
+  clear: both;
+  display:flex;
+}
+
+.item-tag-image {
+  width: 2rem;
+  height: 2rem;
+  float: left;
+}
+
+.item-tag {
+  float:left;
+  padding-left: 0.5rem;
+  position:relative;
+  bottom: 0.5rem;
+}
+
+.tag-div {
+  width:7rem;
 }
