--- a/src/MainItems.css
+++ b/src/MainItems.css
@@ -26,7 +26,7 @@ h2 {
 h3 {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 100;
-  float: left;
+  /* float: left; */
   font-size: medium;
 }
 
