--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,7 +1,7 @@
 .Footer {
   color:rgb(221, 162, 14);
 }
-
+@media screen and (min-width: 480px) {
 .text-footer {
   color:white;
   font-size: 1.5rem;
@@ -9,6 +9,20 @@
   font-weight:600;
   padding-right: 3rem;
   padding-left: 0.5rem;
+  float: left;
+  margin: 0;
+}
+}
+@media screen and (max-width: 820px) {
+  .hide-small {
+    display:none;
+  }
+}
+
+@media screen and (max-width: 470px) {
+.text-footer {
+  display:none;
+}
 }
 
 .fine-print {
@@ -17,6 +31,7 @@
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight:600;
   padding-right: 0.5rem;
+  float: left;
 }
 
 .toolbar {
