--- a/src/Search.css
+++ b/src/Search.css
@@ -7,7 +7,7 @@
   border: 1px solid grey;
   border-radius: 5rem;
   height: 2rem;
-  width: 20rem;
+  width: 80%;
   padding-left: 1rem;
   outline: 0;
   background-color: #f5f5f5;
@@ -22,6 +22,7 @@
   height: 2rem;
   width: 4rem;
   margin-left: 1rem;
+  margin-top: 1rem;
   float:left;
   transition: 0.3s;
 }
@@ -31,33 +32,26 @@
 }
 
 .category-header {
+  background-color: white;
+  border: double;
+  border-color: rgb(148, 170, 127);
+  border-radius: 5px;
   float:left;
-  position:absolute;
-  left:30rem;
-  bottom:1.2rem;
   font-weight: bold;
+  margin: 1rem;
 }
 
 .category-div {
   background-color:burlywood;
-  height: 7rem;
-  width:85%;
   display:flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   float: left;
-  padding: none;
-}
-
-.category-div-two {
-  background-color:rgb(205, 156, 117);
-  height: 7rem;
-  display:flex;
-  float: left;
-  width:15%;
-
+  margin-top: 1rem;
+  width: 100%;
 }
 
 .category-mini {
-  float:left;
-  padding-left:4rem;
-  padding-right: 4rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
