--- a/src/ItemCardLarge.css
+++ b/src/ItemCardLarge.css
@@ -1,15 +1,14 @@
 .item-card-large {
-  /* Add shadows to create the "card" effect */
   text-align: left;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  color:rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.8);
+  color: rgb(0, 0, 0);
+  background-color: rgba(232, 33, 33, 0.8);
   transition: 0.3s;
   border-radius: 5px;
   padding: 1rem;
   width: 38rem;
   height: 37rem;
-  position:relative;
+  position: relative;
   margin: 1rem;
 }
 
@@ -19,15 +18,15 @@
 }
 
 .item-name-large {
-  color:black;
+  color: black;
   font-weight: bold;
   padding-top: 0.5rem;
-  margin:0;
+  margin: 0;
 }
 
 .item-distance-large {
-  padding-top:0.5rem;
-  margin:0;
+  padding-top: 0.5rem;
+  margin: 0;
 }
 
 .item-price-large {
@@ -36,46 +35,46 @@
 
 .item-button-large {
   background-color: rgb(193, 215, 158);
-  color:white;
-  border:none;
-  padding:0.5rem;
+  color: white;
+  border: none;
+  padding: 0.5rem;
   border-radius: 5px;
   transition: 0.3s;
-  display:block;
+  display: block;
   width: 8rem;
   height: 3rem;
-  margin:1rem;
+  margin: 1rem;
 }
 
-.item-button-large:hover{
+.item-button-large:hover {
   background-color: rgb(155, 185, 107);
 }
 
 .seller-image-large {
-  float:left;
+  float: left;
   border-radius: 10rem;
   width: 2rem;
   height: 2rem;
 }
 
 .seller-name-large {
-  float:left;
+  float: left;
   padding-left: 0.5rem;
-  position:relative;
+  position: relative;
   bottom: 0.5rem;
-  padding-right:2rem;
+  padding-right: 2rem;
 }
 
 .labels-large {
-  color:black;
+  color: black;
   font-weight: bold;
   padding-bottom: 0.5rem;
-  margin:0;
+  margin: 0;
 }
 
 .card-body-large {
   clear: both;
-  display:flex;
+  display: flex;
   flex-wrap: wrap;
   max-width: 100%;
 }
@@ -87,16 +86,18 @@
 }
 
 .item-tag {
-  float:left;
+  float: left;
   padding-left: 0.5rem;
-  position:relative;
+  position: relative;
   bottom: 0.5rem;
 }
 
 .info-box {
-  padding-left:2rem;
+  padding-left: 2rem;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .info-div {
-  width:8rem;
+  width: 8rem;
 }
