--- a/src/ItemCardLarge.css
+++ b/src/ItemCardLarge.css
@@ -1,3 +1,5 @@
+@media screen and (min-width: 480px) {
+
 .item-card-large {
   text-align: left;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -12,9 +14,10 @@
   margin: 1rem;
 }
 
-
-.item-card-large:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+.info-box {
+  padding-left: 2rem;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .item-name-large {
@@ -23,6 +26,50 @@
   padding-top: 0.5rem;
   margin: 0;
 }
+}
+
+@media screen and (max-width: 480px) {
+  .item-card-large {
+    text-align: left;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.8);
+    transition: 0.3s;
+    border-radius: 5px;
+    padding: 1rem;
+    width: 18rem;
+    height: auto;
+    position: relative;
+    margin: 0rem 0rem 2rem 0rem;
+  }
+
+  .info-holder{
+    flex-wrap:wrap;
+  }
+
+  .info-box {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 0;
+  }
+
+  .item-name-large {
+    color: black;
+    font-weight: bold;
+    padding-top: 4rem;
+    padding-bottom: 1rem;
+    margin: 0;
+  }
+
+}
+
+
+.item-card-large:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+
 
 .item-distance-large {
   padding-top: 0.5rem;
@@ -90,12 +137,6 @@
   padding-left: 0.5rem;
   position: relative;
   bottom: 0.5rem;
-}
-
-.info-box {
-  padding-left: 2rem;
-  display: flex;
-  justify-content: space-evenly;
 }
 
 .info-div {
